--- a/jellyfin-post-process.service
+++ b/jellyfin-post-process.service
@@ -4,7 +4,7 @@ Description=Post-process Jellyfin TV recordings
 [Service]
 User=jellyfin
 Group=jellyfin
-WorkingDirectory=/var/lib/jellyfin
-ExecStart=/var/lib/jellyfin/scripts/jellyfin-scripts/.venv/python \
-  ./scripts/jellyfin-scripts/main.py \
+WorkingDirectory=/var/lib/jellyfin/scripts/jellyfin-scripts
+ExecStart=/var/lib/jellyfin/scripts/jellyfin-scripts/.venv/bin/python \
+  ./main.py \
   /var/lib/jellyfin/data/livetv/recordings
